# post_prompt_viewer

./: .gitignore  CLAUDE.md  ENRICHED_CALL_LOG.md  LICENSE  README.md  ppv.sh  pyproject.toml  renovate.json
docs/: ENRICHED_CALL_LOG.md
reference/: old_index.cgi  post.cgi
samples/: conversation_demo.json
src/post_prompt_viewer/: __init__.py  app.py  cli.py  config.py  enrich.py  recordings.py  storage.py
src/post_prompt_viewer/web/: __init__.py  routes_api.py  routes_ingest.py  routes_view.py
src/post_prompt_viewer/web/static/css/: app.css
src/post_prompt_viewer/web/static/js/: app.js  latency.js  player.js
src/post_prompt_viewer/web/templates/: base.html  detail.html  index.html
tests/: conftest.py  test_auth.py  test_enrich.py  test_ingest.py  test_security.py  test_storage.py
